# aya-simple

./: .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
aya/: Cargo.toml
aya-log/: Cargo.toml
aya/src/: bpf.rs  lib.rs  pin.rs  util.rs
aya/src/maps/: mod.rs
aya/src/maps/perf/: perf_buffer.rs
aya/src/programs/: extension.rs  kprobe.rs  links.rs  mod.rs  probe.rs  uprobe.rs  utils.rs
aya/src/sys/: bpf.rs  fake.rs  mod.rs  perf_event.rs
shim-std/: Cargo.toml
shim-std/src/: lib.rs  libc.rs
test/kernel_sim/: Cargo.toml
test/kernel_sim/src/: error.rs  lib.rs  util.rs
test/kernel_sim/src/bpf/: mod.rs
test/kernel_sim/src/bpf/helper/: mod.rs
test/kernel_sim/src/bpf/map/: array_map.rs  mod.rs
test/kernel_sim/src/bpf/prog/: mod.rs  verifier.rs
test/kernel_sim/src/fs/: mmap.rs  mod.rs
test/kernel_sim/src/perf/: bpf.rs  kprobe.rs  mod.rs  sample.rs
test/user_def/: Cargo.toml  myapp
test/user_def/src/: fake_func.rs  main.rs
