[package]
name = "user_def"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
aya = { path = "../../aya" }
kernel_sim = { path = "../kernel_sim" }
rbpf = { path = "../../rbpf", default-features = false }
aya-log = { path = "../../aya-log" }
bytes = { workspace = true }

tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }